--- a/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Definitions.mdx
@@ -1,15 +1,15 @@
-### Radian 
+## Radian 
 > The angle subtended at the center of a circle of arc length equal to the radius of the circle
 
-### Circular motion?
+## Circular motion?
 
-### Simple harmonic motion
+## Simple harmonic motion
 $$
 a = -x_0 w^2
 $$
 > A periodic motion caused by a linear rotating force and thus acceleration proportional to, but in the opposite direction to the displacement
 
-### Damping
+## Damping
 > Gradual loss in energy of an oscillating system
 >> **Light damping:**
 >> Resistive force enough to allow multiple oscillations
@@ -20,43 +20,43 @@ $$
 >> **Over-damping/Hard damping:**
 >> Resistive force is so high it results in a slower return to the equilibrium position (Time taken to return > Period)
 
-### Forced oscillation
+## Forced oscillation
 > Forced oscillation occurs when a **periodic** force is applied to an oscillating system
 
-### Resonance
+## Resonance
 > If the applied periodic force has a frequency equal to the **natural frequency ($f_0$)**
 > Resonance results in a significant increase in the amplitude of oscillation
 
-### Thermal equilibrium
+## Thermal equilibrium
 > When two objects in contact with each other are at the same temperature, there will be **no net transfer** of **thermal energy** between them
 
-### Celcius scale 
+## Celcius scale 
 > Based on the thermal properties of water. It takes two fixed points; the melting point of pure ice and the boiling point of pure water and divides the range between into 100 equal increments
 
-### Thermodynamic or Kelvin scale
+## Thermodynamic or Kelvin scale
 > An absolute scale that does not depend on the physical properties of a particular substance, instead, it uses the **Average kinetic energy** of particles
 
-### Thermistor 
+## Thermistor 
 > Semiconductor whose resistance **decreases** with **increasing** temperature
 
 > Range: $-80\degree C \rarr 300\degree C$
 
-### Thermocouple
+## Thermocouple
 > Use a potential difference between two different metals to produce a temperate reading
 
 > Range: $-200\degree C \rarr 1800\degree C$
 
-### Resistive Wire
+## Resistive Wire
 > Measure resistance of the wire to determine temperature.
 
 > Range: $-260\degree C \rarr 850\degree C$
 
-### 1 Mole
+## 1 Mole
 > Amount of substance containing the same number of particles as there is in 12g of Carbon-12
 > A mole of any substance contains a standard number of molecules given by Avogadro's Constant ($N_a$);
 > $N_a = 6.02 * 10^23$
 
-### Ideal gas
+## Ideal gas
 > RAVED
 > - R: **Random** movement of particles in a gas
 > - A: No intermonecular **attraction**
@@ -64,160 +64,160 @@ $$
 > - E: Collisions between molecules are **elastic**; no kinetic energy is lost
 > - D: **Duration** of collisions is nill, collisions are instantanoues
 
-### Boyle's Law
+## Boyle's Law
 > The pressure exerted by a fixed mass of gas is inversely proportional to its volume, provided the temperature of the gas remains constant
 
-### Charles' Law
+## Charles' Law
 > Temperature (Kelvin) is proportional to the volume of the gas
 
-### Kinetic model of gasses
+## Kinetic model of gasses
 > The kinetic model is a theory that links the microscopic particles to their macroscopic properties as a gas
 
-### First law of thermodynamics 
+## First law of thermodynamics 
 > Total internal energy is equal to the sum of total heat energy and total work done
 
 
-### Adiabatic
+## Adiabatic
 > No thermal energy can leave or enter the system
 
-### Isothermal
+## Isothermal
 > Temperature remains constant
 
-### Internal energy of a system
+## Internal energy of a system
 > The sum of the random distributions of kinetic and potential energies of molecules in a system
 
-### Specific heat capacity
+## Specific heat capacity
 > quantity of thermal energy required to raise the temperature of a unit mass of the substance by 1 Kelvin
 
-### Specific latent heat
+## Specific latent heat
 > Thermal energy required per unit mass of a substance to change its state at a constant temperature
 > Fusion = change to a lower energy state
 > Vaporisation = change to a higher energy state
 
-### Sensing device
+## Sensing device
 > An electronic component with a property that changes when physical quantity such as light intensity changes
 
-### Light-dependant resistor
+## Light-dependant resistor
 > An LDR is made of high resistance semi-conducting metal
 
-### Piezo-electric transducer 
+## Piezo-electric transducer 
 > Some crystals such as quartz produce a force when a potential difference is applied across them, causing their shape to change. This is known as the piezo-electric effect.
 
-### Acoustic impedance
+## Acoustic impedance
 > Product of the density of a medium and the velocity of waves traveling through that medium
 
-### Attenuation
+## Attenuation
 > Progressive reduction of power/energy of a wave with distance as it travels along a transmission path through a medium
 
-### Ideal Op-amp
+## Ideal Op-amp
 > - **Infinite input impedance:** No current in and out through inputs
 > - **Zero output impedance:** Entire $V_\text{out}$ is distributed across load
 > - **Infinite open-loop gain:** Output is immediately saturated
 > - **Infinite bandwidth:** All frequencies across inputs are amplified evenly
 > - **Infinite slew rate:** Any change in input results in an instant change across inputs (aka No latency, but do not write this)
 
-### Feedback loops
+## Feedback loops
 > - **Increases bandwidth**
 > - **Descrease distortion**
 > - **Greater operational stability**
 > - **Reduce effective gain (...to avoid saturation)**
 
-### Negative Feedback
+## Negative Feedback
 > When some of the output is fed back into the inverting input of an op-amp to minimize saturation
 
-### Carrier wave
+## Carrier wave
 > A Carrier wave is a high-frequency Electromagnetic wave modulated in either frequency or amplitude to transfer a signal
 
-### Amplitude Modulation
+## Amplitude Modulation
 >In amplitude modulation (AM) the frequency of the modulated wave is constant, and the amplitude of the modulated wave varies proportionally to and in phase with the signal
 
-### Frequency Modulation
+## Frequency Modulation
 > In frequency modulation (FM), the amplitude of the carrier wave remains constant. The frequency of the carrier wave is made to vary in sync with the displacement of this information signal
 
-### Bandwidth (Communication)
+## Bandwidth (Communication)
 > The range of frequencies occupied by the amplitude-modulated wave
 
-### Noise
+## Noise
 > Random unwanted signal that is added onto and distorts the transmitted signal
 
-### Analog signal
+## Analog signal
 > Signal has the same variation as the data and is **continuously variable**
 
-### Digital signal
+## Digital signal
 > Signal with only high and low states with no intermediate values - discrete. Due to this, repeaters can regenerate a signal matching the original one without the noise.
 
-### ADC - Analog to digital converter
+## ADC - Analog to digital converter
 > Samples an input analog signal at the sampling rate and outputs the voltage of the analog signal at that time
 
-### Sampling
+## Sampling
 > Take analog signal and "sample" its voltage at regular intervals called the sampling rate
 
-### Wire pairs
+## Wire pairs
 > Potential difference between the two wires carries the signal
 
-### Wire pairs
+## Wire pairs
 > Potential difference between the two wires is the signal
 
-### Coaxial cable
+## Coaxial cable
 > Copper core with insulation and copper sheath/braid around outside shields core from noise.
 
-### Signal to noise ratio
+## Signal to noise ratio
 > A signal must be distinguishable from noise, this can be measured using the signal to noise ratio. 
 > Repeaters amplify both the signal and noise, so do not affect SNR
 > Signal regenerators completely regenerate the original signal, so that noise is removed.
 
-### Geostationary satellite
+## Geostationary satellite
 > The satellite orbits in a fixed position on top of earth above the equator and orbits from west-to-east with a period of 24 hours
 
-### Newton's law of gravitation
+## Newton's law of gravitation
 > Force between two point masses is proportional to the product of their masses and inversely proportional to the square of their separation.
 
-### Gravitational field strength
+## Gravitational field strength
 > The gravitational force exerted at a point per unit mass on a small test mass at that point
 
-### Gravitational potential energy
+## Gravitational potential energy
 > The work done in bringing a small test mass from infinity to that point
 
-### Gravitational potential
+## Gravitational potential
 > The work done per unit mass in bringing a small test mass from infinity to that point
 
-### Escape velocity
+## Escape velocity
 > The velocity at which an object on the surface of a body/mass must be propelled to not return to the body under their mutual gravitational attraction
 
-### Kepler's 3rd law
+## Kepler's 3rd law
 > For planets or satellites describing orbits around the same central body, the square of the period is proportional to the cube of the radius of the orbit
 
-### Magnetic fields in a current conducting wire
+## Magnetic fields in a current conducting wire
 > Any current conducting wire will have an induced radial magnetic field around it in the direction found via The Right-hand grip rule
 
-### Weightlessness
+## Weightlessness
 > When an object has no contact/support force acting on it
 
-### Magnetic field
+## Magnetic field
 > Region of space where a magnetic pole experiences a force
 
-### Electric field strength
+## Electric field strength
 > Force per unit charge 
 
-### Electric potential
+## Electric potential
 > The work done per unit mass in bringing a small test charge from infinity to that point
 
-### Potential gradiant
+## Potential gradient
 > Rate of change of potential with respect to distance
 
-### Coulomb's law
+## Coulomb's law
 > Any two point charges exert an electric force that is proportional to the product of their charges and inversely proportional to the square of their separation
 
-### Capacitance
+## Capacitance
 > Ratio of charge to the potential difference
 
-### Magnetic fields in the solenoid
+## Magnetic fields in the solenoid
 > Solenoid rule: Thumb = Magnetic North pole, Fingers = direction of current traveling around the solenoid
 
-### Magnetic flux density
+## Magnetic flux density
 > Force per unit length experienced by a long straight conductor carrying unit that is placed at right angles at that point
 
-### 1 Tesla 
+## 1 Tesla 
 > One tesla is the uniform magnitude flux density when a wire carrying a current 1.0A is placed at right angles to a magnetic field and experiences a force per unit length of $1.0Nm^-1$
 
-### Hall effect 
+## Hall effect 
