--- a/src/pages/notes/2021/9702_-_Physics/Revision/Formulae.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Formulae.mdx
@@ -1,6 +1,6 @@
-### Non-uniform acceleration
+#### Non-uniform acceleration
 
-#### Rotational Quantities
+##### Rotational Quantities
 
 $$$
 \theta = s/r
@@ -15,7 +15,7 @@ $$$
 $$$
 
 
-#### Circular motion
+##### Circular motion
 
 $$$
 F_c = \frac{mv^2}{r} = mr\omega^2
@@ -29,14 +29,14 @@ $$$
 v = \omega r
 $$$
 
-#### Circular motion - Banked corners
+##### Circular motion - Banked corners
 
 $$$
 \sqrt{(F_n)^2 - (F_g)^2}
 $$$
 
 
-#### Simple harmonic motion
+##### Simple harmonic motion
 
 $$$
 a = -x_0 \omega^2
@@ -65,7 +65,7 @@ x = -x_0 \omega^2 cos(\omega t)
 $$$
 
 
-#### Simple harmonic motion + Natural frequency
+##### Simple harmonic motion + Natural frequency
 
 Pendulum
 $$$
@@ -85,7 +85,7 @@ $$$
 f_0 = \frac{1}{2\pi} \sqrt{\frac{k}{m}}
 $$$
 
-### Energy in Simple harmonic motion
+##### Energy in Simple harmonic motion
 
 $$$
 E_\text{total} = E_p + E_k
@@ -117,15 +117,15 @@ $$$
 E_\text{total} = mgh_0
 $$$
 
-### Thermal Physics
+#### Thermal Physics
 
-#### Kelvin
+##### Kelvin
 
 $$$
 T(k) = \theta (\deg C) + 273.15
 $$$
 
-#### Ideal gasses
+##### Ideal gasses
 
 $$$
 N = nN_a
@@ -147,7 +147,7 @@ $$$
 \Delta W = P \Delta V
 $$$
 
-#### Gas laws
+##### Gas laws
 
 Boyle's law
 $$$
@@ -160,7 +160,7 @@ $$$
 
 Charles' law 
 
-(Only if T in kelvin)
+- $T$ : Temperature in Kelvin
 $$$
 T \propto V
 $$$
@@ -173,18 +173,55 @@ $$$
 PV = nRT
 $$$
 
-## Mean squared speed
-
+##### Mean squared speed
 $$$
 E_k = \frac{1}{2} m <c^2> = \frac{3}{2} \frac{n}{N}RT
 $$$
 
-K = Boltzmann constant
+- $K$ : Boltzmann constant
 $$$
 E_k = \frac{3}{2} KT
 $$$
 
-Nm = Total mass
+- $Nm$ : Total mass
 $$$
 PV = NKT = \frac{1}{3} Nm <C^2>
+$$$
+
+##### Internal Energy
+
+$$$
+U = \Sigma E_k + \Sigma E_p
+$$$
+
+##### Specific heat capacity
+- $\Delta h$ : Heat added from/to the environment
+- $\Delta Q$ : Heat added from/to the system
+$$$
+\Delta h + \Delta Q = mc \Delta T
+$$$
+
+
+##### Specific latent heat
+$$$
+Q = mL
+$$$
+
+#### Sensing devices and Ultrasound
+
+##### Acoustic impedance
+$$$
+\Zeta = \rho v
+$$$
+
+##### Ratio of reflected to incident Ultrasound
+- $R$ : Ratio
+- $I_r$ : Intensity reflected
+$$$
+R = \frac{I_r}{I_0} = \frac{(z_2 - z_1)^2}{(z_2 + z_1)^2}
+$$$
+
+##### Attenuation of Ultrasound
+$$$
+T_\text{Attenuated} = I_0 e^{-\mu x}
 $$$
