--- a/src/pages/notes/2021/9702_-_Physics/Revision/Formulae.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Revision/Formulae.mdx
@@ -88,21 +88,21 @@ $$$
 ##### Energy in Simple harmonic motion
 
 $$$
-E_\text{total} = E_p + E_k
+E_{total} = E_p + E_k
 $$$
 
 Spring:
 $$$
-E_\text{total} = \frac{1}{2} k (x_0)^2
+E_{total} = \frac{1}{2} k (x_0)^2
 $$$
 
 For moving system:
 $$$
-E_\text{total} = \frac{1}{2} m (v_0)^2
+E_{total} = \frac{1}{2} m (v_0)^2
 $$$
 
 $$$
-E_\text{total} = \frac{1}{2} m \omega^2 (x_0)^2
+E_{total} = \frac{1}{2} m \omega^2 (x_0)^2
 $$$
 
 At any point: 
@@ -114,7 +114,7 @@ $$$
 For Pendulums
 
 $$$
-E_\text{total} = mgh_0
+E_{total} = mgh_0
 $$$
 
 #### Thermal Physics
@@ -223,5 +223,20 @@ $$$
 
 ##### Attenuation of Ultrasound
 $$$
-T_\text{Attenuated} = I_0 e^{-\mu x}
+T_{Attenuated} = I_0 e^{-\mu x}
+$$$
+
+##### Strain Gauge
+$$$
+R = \frac{\mu L}{A}
+$$$
+
+##### Potential divider
+$$$
+V_{out} = \frac{V_{in} * R_T}{R + R_T}
+$$$
+
+#### Electronics
+$$$
+\text{Todo}
 $$$
