--- a/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
+++ b/src/pages/notes/2021/9702_-_Physics/Paper_4_-_A_Level_Structured_Questions/Communication.mdx
@@ -1,4 +1,4 @@
-import { Table, TableBody, TableCell, TableContainer, TableHead, TableRow, Typography } from '@material-ui/core';
+import { Table, TableBody, TableCell, TableContainer, TableHead, TableRow, Typography } from '@mui/material';
 import Heading from 'components/Heading';
 import Information from 'components/Information';
 import Li from 'components/Li';
